fixed squished avatars

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -564,7 +564,10 @@ select {
 }
 
 .avatar {
+  background-position: center;
   border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: 100%;
   height: 3.7rem;
   width: 3.7rem;
 }
